--- a/app/src/main/res/layout/fra_wode.xml
+++ b/app/src/main/res/layout/fra_wode.xml
@@ -5,4 +5,11 @@
     android:layout_height="match_parent">
 
 
+    <EditText
+        android:id="@+id/edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="哈哈哈哈"
+        android:editable="false"/>
+
 </LinearLayout>
