--- a/app/src/main/res/layout/activity_touming.xml
+++ b/app/src/main/res/layout/activity_touming.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:id="@+id/linear"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,6 +17,13 @@
             <!--android:fitsSystemWindows="true">-->
 
         <!--</LinearLayout>-->
+
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#2878DC"
+        android:text="哈哈哈哈哈"/>
 
         <!--<FrameLayout-->
             <!--android:layout_width="match_parent"-->
