--- a/app/src/main/res/layout/view_auto_split_textview.xml
+++ b/app/src/main/res/layout/view_auto_split_textview.xml
@@ -6,10 +6,12 @@
         android:layout_width="match_parent"
         android:textSize="12sp"
         android:lineSpacingMultiplier="1.2"
+        android:gravity="center_vertical"
         android:layout_height="match_parent" />
     <com.excalibur.followproject.view.novel.AutoAdjustTextView
         android:layout_width="match_parent"
         android:textSize="12sp"
+        android:gravity="center_vertical"
         android:lineSpacingMultiplier="1.2"
         android:layout_height="match_parent" />
 </FrameLayout>
