--- a/app/src/main/res/layout/base_read.xml
+++ b/app/src/main/res/layout/base_read.xml
@@ -37,6 +37,7 @@
             android:text="哈哈哈哈"/>
 
         <com.excalibur.followproject.view.novel.AutoSplitTextView
+            android:visibility="invisible"
             android:id="@+id/base_read_autoSplit"
             android:layout_width="match_parent"
             android:layout_marginBottom="32dp"
@@ -45,12 +46,37 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_height="match_parent"/>
+
+        <com.excalibur.followproject.view.novel.AutoAdjustTextView
+            android:id="@+id/autoAdjust"
+            android:textSize="12sp"
+            android:gravity="center_vertical"
+            android:lineSpacingMultiplier="1.2"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_marginBottom="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="12sp"
+            android:gravity="center_vertical"
+            android:lineSpacingMultiplier="1.2"
+            android:layout_marginBottom="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
     </RelativeLayout>
 
-    <!--<com.excalibur.followproject.PageWidget-->
-        <!--android:id="@+id/page"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"/>-->
+    <com.excalibur.followproject.PageWidget
+        android:id="@+id/page"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <!--<com.excalibur.followproject.fanye.PageWidget-->
         <!--android:id="@+id/page"-->
