--- a/app/src/main/res/layout/base_read.xml
+++ b/app/src/main/res/layout/base_read.xml
@@ -65,7 +65,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textSize="12sp"
-            android:gravity="center_vertical"
             android:lineSpacingMultiplier="1.2"
             android:layout_marginBottom="32dp"
             android:layout_marginTop="32dp"
@@ -73,10 +72,26 @@
             android:layout_marginRight="10dp"/>
     </RelativeLayout>
 
-    <com.excalibur.followproject.PageWidget
-        android:id="@+id/page"
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#2878DC"/>
+
+    <com.excalibur.followproject.view.crul.CurlView
+        android:id="@+id/curl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <!--<com.excalibur.followproject.PageWidget-->
+        <!--android:id="@+id/page"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"/>-->
+
+    <!--<ImageView-->
+        <!--android:id="@+id/image"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_margin="100dp"/>-->
 
     <!--<com.excalibur.followproject.fanye.PageWidget-->
         <!--android:id="@+id/page"-->
