--- a/app/src/main/res/layout/base_read.xml
+++ b/app/src/main/res/layout/base_read.xml
@@ -77,10 +77,10 @@
         <!--android:layout_height="match_parent"-->
         <!--android:background="#2878DC"/>-->
 
-    <!--<com.excalibur.followproject.view.crul.CurlView-->
-        <!--android:id="@+id/curl"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"/>-->
+    <com.excalibur.followproject.view.crul.CurlView
+        android:id="@+id/curl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <!--<com.excalibur.followproject.PageWidget-->
         <!--android:id="@+id/page"-->
